# textseg

./: .gitignore  Datasets.hs  LICENSE-SwiftLDA  Main.hs  Makefile  README.md  SkewHeap.hs  Tests.hs  Util.hs  algstats.hs  docstats.hs  dp-experiment.hs  modelstats.hs  plot.py  run-texttiling.hs  run-texttiling.sh  textseg.cabal  texttiling-experiment.hs  topictiling-experiment.hs  train.hs
Math/: Combinatorics.hs
NLP/: Data.hs  FrequencyVector.hs  GibbsLDA.hs  LDA.hs  SegEval.hs  Segmentation.hs  SwiftLDA.hs  Tokenizer.hs  WordFrequencyVector.hs
NLP/Segmentation/: DP.hs  NLTK.hs  TextTiling.hs  TopicTiling.hs
NLP/SwiftLDA/: UnboxedMaybeVector.hs
data/: dump-redis-interviews.py  jarmasz_szpakowicz_2003.list
data/docsouth/: U-0007.txt  U-0011.txt  U-0180.txt  U-0183.txt  U-0184.txt  U-0185.txt  U-0224.txt  U-0228.txt  U-0240.txt  U-0251.txt  U-0261.txt  U-0264.txt  segmentations.json
data/inaugural/: 2005-Bush.txt
data/moonstone_corpus/: README.txt  annot_to_group.csv  group_to_chapter.csv
data/moonstone_corpus/segmentations/: ch1.csv  ch10.csv  ch11.csv  ch12.csv  ch13.csv  ch14.csv  ch15.csv  ch16.csv  ch17.csv  ch18.csv  ch19.csv  ch2.csv  ch20.csv  ch21.csv  ch3.csv  ch4.csv  ch5.csv  ch7.csv  ch8.csv  ch9.csv
data/moonstone_corpus/text/: ch1.txt  ch10.txt  ch11.txt  ch12.txt  ch13.txt  ch14.txt  ch15.txt  ch16.txt  ch17.txt  ch18.txt  ch19.txt  ch2.txt  ch20.txt  ch21.txt  ch3.txt  ch4.txt  ch5.txt  ch7.txt  ch8.txt  ch9.txt
data/stargazer_hearst_1997/: README.md  article.txt
data/u-series/: U-0005.txt  U-0008.txt  U-0012.txt  U-0014.txt  U-0017.txt  U-0019.txt  U-0020.txt  U-0023.txt  U-0098.txt  U-0178.txt  U-0181.txt  U-0186.txt  U-0193.txt  U-0243.txt  U-0249.txt  U-0252.txt  segmentations.json
