name:                textseg
version:             0.1.0.0
synopsis:            An experiment comparing the performance of text segmentation algorithms.
-- description:         
homepage:            https://github.com/gmaslov/textseg
-- license:             
license-file:        LICENSE
author:              Greg Maslov
maintainer:          maslov@cs.unc.edu
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable algstats
  main-is:             algstats.hs
  ghc-options:         -W -O2 -threaded -rtsopts
  -- other-modules:       
  build-depends:       base ==4.6.*,
                       hashable ==1.1.*,
                       attoparsec ==0.10.*,
                       bytestring ==0.10.*,
                       MissingH ==1.2.*,
                       MissingPy ==0.10.*,
                       unordered-containers ==0.2.*,
                       vector ==0.10.*,
                       containers ==0.5.*,
                       hmatrix ==0.14.*,
                       hmatrix-gsl-stats ==0.1.*,
                       MonadRandom ==0.1.*,
                       stemmer ==0.2.*,
                       directory ==1.2.*,
                       unix ==2.6.*,
                       process ==1.1.*,
                       binary ==0.6.*,
                       filepath ==1.3.*,
                       array ==0.4.*,
                       aeson ==0.6.*,
                       random ==1.0.*,
                       parallel ==3.2.*

